Adjustments and QoL - adjustments to empty state messages - adjusted profile dark mode issues - added toast messages for successful addition/removal of tenders to the watchlist

--- a/Tender-UserInterface/Tender-User-Interface-React/src/Pages/Analytics/Analytics.css
+++ b/Tender-UserInterface/Tender-User-Interface-React/src/Pages/Analytics/Analytics.css
@@ -193,7 +193,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    z-index: 1000;
+    z-index: 999;
     display: flex;
     justify-content: center;
     align-items: center;
